# hdfkit

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/hdfkit/: _base.py  _hdf4.py  _hdf5.py  grid2dreader.py  reader.py
src/mtmhdf/: _hdf5.py
tests/: test_grid2dreader.py  test_grid2dreader_stitching.py  test_grid_modis_sin.py  test_hdf4_reader.py  test_readbit_integration.py  test_slice.py  test_utils.py  test_writer.py
