[build-system]
requires = ["setuptools>=40.8.0", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hdfkit"
description = "Unified HDF4/HDF5 reader with grid tile stitching"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]
requires-python = ">=3.11"
dependencies = [
    "pyhdf >= 0.10.5",
    "netcdf4 >= 1.6.5",
    "numpy >= 1.23.0",
]
dynamic = ["version"]

[tool.setuptools_scm]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
